[HOT] CK Video Thumbnails UI Changes #1185 - added new Loading translation - added `wonderland-box` hook to all `box`s - changed sorting of Neon thumbnails to be by `rank` - removed default stamp on default thumbs (and associated support code) - added a new `-alt` variation of `wonderland-box` we can use for default thumbnails - put neonScore back, now with Neon bug - new white version of `mark.svg` - make HUD aligned nicer and removed Neonscore from it - added a rubric - added `is-paddingless` - fixed subnav

--- a/src/css/components/_icon.scss
+++ b/src/css/components/_icon.scss
@@ -3,10 +3,11 @@
 .fa-neon {
     width: 39 / 49 * 1em; // magic number - size of SVG
     height: 1em;
+    line-height: 1;
     background-size: contain;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    background: url('/img/mark-aaa.svg');
+    background: url('/img/mark-fff.svg');
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
